@@ -1,3 +1,6 @@
+* Fri Sep 07 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 0.0.3-0
+- Drop Hiera 4 support
+
 * Thu Jul 06 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 0.0.2-0
 - Update puppet dependency and remove OBE pe dependency in metadata.json
 
